--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -3,5 +3,11 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/layout.css')
   body
+    .top 
+    header
+      div.content_center
+        h1 陈佳人
+        p 人生是一场独自修行的道路
     block content
