--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -26,7 +26,13 @@
   .content {
     color: #555;
     padding: 0 20px;
-    font-size: 14px
+    font-size: 14px;
+    height: 300px;
+    overflow: hidden;
+
+    p, table, pre {
+      white-space: nowrap
+    }
   }
   footer{
     font-size: 0.85em;
