--- a/app/views/blog.jade
+++ b/app/views/blog.jade
@@ -5,7 +5,7 @@ block content
     div.blog
       header.article-header
         h1
-          a(class="article-title", href="blog/#{blog.id}")= blog.title
+          a(class="article-title", href="javascript:void(0)")= blog.title
       .content.article-entry
         != blog.content
       footer.article-footer
