--- a/app/views/blog.jade
+++ b/app/views/blog.jade
@@ -10,5 +10,6 @@ block content
         != blog.content
       footer.article-footer
         ul.article-tag-list
-          li.article-tag-list-item
-            a.article-tag-list-link= blog.tag
+          - for tag in blog.tags
+            li.article-tag-list-item
+              a(href="/blog/tag/#{tag.id}")article-tag-list-link= blog.tag
