--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -5,11 +5,12 @@ block content
     div.blog
       header.article-header
         h1
-          a(class="article-title", href="blog/#{blog.id}")= blog.title
+          a(class="article-title", href="/blog/#{blog.id}")= blog.title
       .content.article-entry
         != blog.content
       footer.article-footer
         ul.article-tag-list
-          li.article-tag-list-item
-            a.article-tag-list-link= blog.tag
+          - for tag in blog.tags
+            li.article-tag-list-item
+              a(href="/blog/tag/#{tag.id}").article-tag-list-link= tag.name
 script
