--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -25,13 +25,12 @@
   }
   .content {
     color: #555;
-    padding: 0 20px;
+    padding: 0 5px 0 20px;
     font-size: 14px;
     height: 300px;
     overflow: hidden;
 
     p, table, pre {
-      white-space: nowrap
     }
   }
   footer{
@@ -58,11 +57,5 @@
         }
       }
     }
-  }
-}
-
-.blog-detail {
-  .content {
-    height: auto;
   }
 }
