--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -1,37 +1,85 @@
 body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    margin: 0 auto;
-    padding: 0;
-    color: #696969;
-    background: url(images/bj.png) scroll;
-    width: 1080px;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  margin: 0 auto;
+  padding: 0;
+  color: #696969;
+  background: url(images/bj.png) scroll;
+  width: 1080px;
 
-    .layout-header {
-        margin: 20px;
-        color: #000;
-        text-shadow: 1px 1px 0 #aaa;
-        font-family: 'Microsoft Yahei';
-        h1 {
-            font-weight: bold;
-            padding: 5px 0;
-            border: none;
-            line-height: 2em;
-            font-size: 32px !important;
-            text-shadow: 1px 1px 2px #111;
-        }
-        p {
-            letter-spacing: 4px;
-            font-size: 13px;
-            margin: 5px 0px;
-            height: 20px;
-        }
-
+  .layout-header {
+    margin: 20px;
+    color: #000;
+    text-shadow: 1px 1px 0 #aaa;
+    font-family: 'Microsoft Yahei';
+    h1 {
+      font-weight: bold;
+      padding: 5px 0;
+      border: none;
+      line-height: 2em;
+      font-size: 32px !important;
+      text-shadow: 1px 1px 2px #111;
     }
-    /*#main{
-        border-radius: 4px 0 0 0;
-        -webkit-border-radius: 4px 0 0 0;
-        -moz-border-radius: 4px 0 0 0;
+    p {
+      letter-spacing: 4px;
+      font-size: 13px;
+      margin: 5px 0px;
+      height: 20px;
+    }
+
+  }
+
+  #main {
+    .blogs, .blog-detail {
+      width: 80%;
+      display: inline-block;
+    }
+
+    .blog-detail {
+      .content {
+        height: auto;
+      }
+    }
+
+    #right{
+      width: 19%;
+      height: 800px;
+      float: right;
+      margin: 30px 0 0 0;
+      background: #F7F7F7;
+      border-radius: 5px;
+      border: #eee 1px solid;
+
+      .title {
+        padding: 5px;
+        font-size: 20px;
+      }
+
+      li {
+        padding: 5px 5% 0;
+        a {
+          font-size: 15px;
+          text-decoration: none;
+          color: #000;
+        }
+
+        a:hover {
+          color: #258fb8;
+        }
+      }
+
+      #tags {
         margin-top: 40px;
-    }*/
+        li {
+          display: inline-block;
+        }
+      }
+    }
+  }
+  /*#main{
+    border-radius: 4px 0 0 0;
+    -webkit-border-radius: 4px 0 0 0;
+    -moz-border-radius: 4px 0 0 0;
+    margin-top: 40px;
+  }*/
 }
 
