--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -183,7 +183,7 @@ body {
   #main {
     display: inline;
     float: left;
-    width: 73.3333333333333%;
+    width: 100%;
     margin: 0 0.8333333333333%;
   }
 }
