right layout fix

--- a/app/views/blog.jade
+++ b/app/views/blog.jade
@@ -13,3 +13,4 @@ block content
           - for tag in blog.tags
             li.article-tag-list-item
               a(href="/blog/tag/#{tag.id}").article-tag-list-link= tag.name
+  include ./right.jade
