--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -14,4 +14,4 @@ block content
             - for tag in blog.tags
               li.article-tag-list-item
                 a(href="/blog/tag/#{tag.id}").article-tag-list-link= tag.name
-script
+  include ./right.jade
