--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -11,7 +11,8 @@ html
     .top 
     header.layout-header
       div
-        h1 陈佳人
+        h1 
+          a(href="/") 陈佳人
         p 人生是一场独自修行的道路
     #main
       block content
