--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -8,16 +8,20 @@ body {
 
   .layout-header {
     margin: 20px;
-    color: #000;
     text-shadow: 1px 1px 0 #aaa;
     font-family: 'Microsoft Yahei';
-    h1 {
+    h1 a{
       font-weight: bold;
       padding: 5px 0;
       border: none;
       line-height: 2em;
       font-size: 32px !important;
       text-shadow: 1px 1px 2px #111;
+      text-decoration: none;
+      color: #555;
+    }
+    h1 a:hover {
+      color: #258fb8;
     }
     p {
       letter-spacing: 4px;
