--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -17,4 +17,4 @@ html
     #main
       block content
 
-  script(src='/javascripts/jquery-1.10.2.min.js')
+  script(src='/javascripts/jquery-1.11.1.js')
