--- a/app/views/blogs/index.jade
+++ b/app/views/blogs/index.jade
@@ -2,6 +2,6 @@ extends ../shares/layout
 
 block content
   .blogs
-    - for blog in blogs
+    for blog in blogs
       include ./blog_detail.jade
   include ../shares/right.jade
