--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -14,6 +14,15 @@ html
         h1 
           a(href="/") 陈佳人
         p 人生是一场独自修行的道路
+      #navigation
+        ul.menus
+          li.menus-item
+            a(href="/") 首页
+          li.menus-item
+            a(href="/") 推荐
+          li.menus-item
+            a(href="/about") 关于blog
+          
     #main
       block content
 
