--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -1,5 +1,5 @@
 .blog {
-  margin: 30px 0;
+  margin: 10px 0 30px;
   background: #fff;
   -webkit-box-shadow: 1px 2px 3px #ddd;
   box-shadow: 1px 2px 3px #ddd;
@@ -9,18 +9,9 @@
   header{
     padding: 20px;
     a.title{
-      text-decoration: none;
       font-size: 2em;
       font-weight: bold;
-      color: #555;
       line-height: 1.1em;
-      -webkit-transition: color 0.2s;
-      -moz-transition: color 0.2s;
-      -ms-transition: color 0.2s;
-      transition: color 0.2s;
-    }
-    a.title:hover {
-      color: #258fb8;
     }
   }
   .content {
