--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -1,4 +1,17 @@
 body {
+  a{
+    text-decoration: none;
+    color: #555;
+    line-height: 1.1em;
+    -webkit-transition: color 0.2s;
+    -moz-transition: color 0.2s;
+    -ms-transition: color 0.2s;
+    transition: color 0.2s;
+  }
+  a:hover {
+    color: #258fb8;
+  }
+
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   margin: 0 auto;
   padding: 0;
@@ -7,7 +20,7 @@ body {
   width: 1080px;
 
   .layout-header {
-    margin: 20px;
+    margin: 20px 20px 0;
     text-shadow: 1px 1px 0 #aaa;
     font-family: 'Microsoft Yahei';
     h1 a{
@@ -29,7 +42,18 @@ body {
       margin: 5px 0px;
       height: 20px;
     }
-
+    .menus {
+      margin: 15px 0 0;
+      padding: 8px;
+      list-style: none;
+      li {
+        display: inline;
+        padding: 10px;
+        a {
+          text-decoration: none;
+        }
+      }
+    }
   }
 
   #main {
@@ -48,7 +72,7 @@ body {
       width: 19%;
       height: 800px;
       float: right;
-      margin: 30px 0 0 0;
+      margin: 10px 0 0;
       background: #F7F7F7;
       border-radius: 5px;
       border: #eee 1px solid;
@@ -78,6 +102,18 @@ body {
         }
       }
     }
+  }
+
+
+  .about {
+    margin: 10px 0 30px;
+    padding: 30px 30px 50px;
+    background: #fff;
+    -webkit-box-shadow: 1px 2px 3px #ddd;
+    box-shadow: 1px 2px 3px #ddd;
+    border: 1px solid #ddd;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
   }
   /*#main{
     border-radius: 4px 0 0 0;
