--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -52,4 +52,110 @@
       float: right;
     }
   }
+
+  .comments {
+    border-top: 1px solid #CCC;
+    padding: 5px;
+    .comment {
+      padding: 10px 30px;
+      .name {
+        display: inline-block;
+        text-align: left;
+        vertical-align: top;
+        width: 80px;
+        overflow: hidden;
+      }
+      .content {
+        width: 680px;
+        background: #eee;
+        border-radius: 5px;
+        padding: 8px 12px;
+        .time {
+          color: gray;
+          font-size: 12px;
+          padding: 0 0 6px 0;
+        }
+        display: inline-block;
+      }
+    }
+    .in-comment {
+      padding: 25px;
+      label {
+        padding: 0 15px 0 0;
+        vertical-align: top;
+      }
+      .in-name {
+        padding: 20px 0;
+        input {
+          padding: 5px;
+        }
+      }
+      .in-content {
+        textarea{
+          width: 720px;
+          height: 100px!important;
+          padding: 5px;
+        }
+      }
+      .in-btn {
+        text-align: right;
+        padding: 10px 20px 0 0;
+      }
+    }
+  }
+}
+
+.btn{
+  border: 1px solid #d1d1d1;
+  cursor: pointer;
+  vertical-align: middle;
+  display: inline-block;
+  padding: 0px 20px;
+  height: 26px;
+  line-height: 25px;
+  font-size: 14px;
+  -webkit-box-shadow: 0 1px 0 rgba(95, 50, 0, 0.5);
+  -moz-box-shadow: 0 1px 0 rgba(95, 50, 0, 0.5);
+  box-shadow: 0 1px 0 rgba(95, 50, 0, 0.5);
+  background-color: white;
+  color: #333;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+}
+.btn:hover{
+  background-color: #2277cc;
+  border-color: #2277cc;
+  color: #fff;
+  text-decoration: none;
+  -webkit-box-shadow: 0 1px 2px #c6c6c6;
+  -moz-box-shadow: 0 1px 2px #c6c6c6;
+  box-shadow: 0 1px 2px #c6c6c6;
+}
+.btn[disabled=disabled], .btn[disabled=disabled]:hover{
+  color: #D1D1D1;
+  cursor: default;
+  box-shadow: 0 1px 0 rgba(95, 50, 0, 0.5);
+  background-color: white;
+  border-color: #d1d1d1;
+}
+
+.btn.primary{
+  border: 1px solid #1b5da0;
+  cursor: pointer;
+  font-weight: bold;
+  background-color: #5599dd;
+  color: white;
+}
+.btn.primary:hover{
+  background-color: #4290df;
+  border-color: #3399ff;
+  color: #FFF;
+  text-decoration: none;
+}
+.btn.primary[disabled=disabled], .btn.primary[disabled=disabled]:hover{
+  color: #D1D1D1;
+  cursor: default;
+  box-shadow: 0 1px 0 rgba(95, 50, 0, 0.5);
+  background-color: white;
+  border-color: #d1d1d1;
 }
