--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -15,7 +15,7 @@ html
         h1 
           a(href="/") 陈佳人
         p 人生是一场独自修行的道路
-      #navigation
+      nav#navigation
         ul.menus
           li.menus-item
             a(href="/") 首页
