--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -42,17 +42,11 @@ body {
       margin: 5px 0px;
       height: 20px;
     }
-    .menus {
+    nav a {
       margin: 15px 0 0;
       padding: 8px;
       list-style: none;
-      li {
-        display: inline;
-        padding: 10px;
-        a {
-          text-decoration: none;
-        }
-      }
+      text-decoration: none;
     }
   }
 
