--- a/app/views/blogs/blog_detail.jade
+++ b/app/views/blogs/blog_detail.jade
@@ -3,6 +3,7 @@ if blog
     header.article-header
       h1
         a(class="article-title", href="/blog/#{blog.id}")= blog.title
+        label.article-times 阅读#{blog.times}次
     .content.article-entry
       != blog.content
     footer.article-footer
