--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -19,6 +19,13 @@ body {
   background: url(images/bj.png) scroll;
   width: 1080px;
 
+  .top {
+    padding: 5px 0;
+    a.login-item {
+      float: right;
+    }
+  }
+
   .layout-header {
     margin: 20px 20px 0;
     text-shadow: 1px 1px 0 #aaa;
