--- a/app/views/users/login.jade
+++ b/app/views/users/login.jade
@@ -10,4 +10,4 @@ block content
           label 密码：
           input(name="password")#psw
         div
-          input(type="submit")
+          input.btn.primary(type="submit")
