--- a/app/views/blogs/blog.jade
+++ b/app/views/blogs/blog.jade
@@ -4,3 +4,5 @@ block content
   .blog-detail
     include ./blog_detail.jade
   include ../shares/right.jade
+block footerJS
+  script(src='/javascripts/blog.js')
