--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -6,15 +6,16 @@ html
     link(rel="stylesheet/less", type="text/css", href='/stylesheets/layout.less')
     link(rel="stylesheet/less", type="text/css", href='/stylesheets/blog.less')
     link(rel="stylesheet/less", type="text/css", href='/stylesheets/user.less')
+    link(rel="stylesheet/less", type="text/css", href='/stylesheets/common.less')
+    link(rel="stylesheet/less", type="text/css", href='/stylesheets/plugin.less')
     script(src='/javascripts/less-2.0.0.min.js')
-    script(src='/javascripts/jquery-1.11.1.js')
-
   body
     .top 
       if !session || !session.login
-        a.login-item(href="/user/login") 登陆
+        a(href="/user/login") 登陆
       else
-        a.login-item 欢迎 #{session.loginData.name}
+        a 欢迎 #{session.loginData.name}
+        a(href="/blog/new") new
     header.layout-header
       div
         h1 
@@ -26,3 +27,5 @@ html
         a(href="/about") 关于blog
     #main
       block content
+      script(src='/javascripts/jquery-1.11.1.js')
+      block footerJS
