--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -114,57 +114,36 @@
   }
 }
 
-.btn{
-  border: 1px solid #d1d1d1;
-  cursor: pointer;
-  vertical-align: middle;
-  display: inline-block;
-  padding: 0px 20px;
-  height: 26px;
-  line-height: 25px;
-  font-size: 14px;
-  -webkit-box-shadow: 0 1px 0 rgba(95, 50, 0, 0.5);
-  -moz-box-shadow: 0 1px 0 rgba(95, 50, 0, 0.5);
-  box-shadow: 0 1px 0 rgba(95, 50, 0, 0.5);
-  background-color: white;
-  color: #333;
+.blog-new {
+  margin: 10px 0 30px;
+  background: #fff;
+  -webkit-box-shadow: 1px 2px 3px #ddd;
+  box-shadow: 1px 2px 3px #ddd;
+  border: 1px solid #ddd;
   -webkit-border-radius: 3px;
   border-radius: 3px;
-}
-.btn:hover{
-  background-color: #2277cc;
-  border-color: #2277cc;
-  color: #fff;
-  text-decoration: none;
-  -webkit-box-shadow: 0 1px 2px #c6c6c6;
-  -moz-box-shadow: 0 1px 2px #c6c6c6;
-  box-shadow: 0 1px 2px #c6c6c6;
-}
-.btn[disabled=disabled], .btn[disabled=disabled]:hover{
-  color: #D1D1D1;
-  cursor: default;
-  box-shadow: 0 1px 0 rgba(95, 50, 0, 0.5);
-  background-color: white;
-  border-color: #d1d1d1;
+  padding: 10px;
+  label.left-title {
+    width: 50px;
+    display: inline-block;
+    vertical-align: top;
+  }
+  .title, .content, .footer {
+    margin: 10px 0;
+    input {
+      width: 300px;
+    }
+    textarea {
+      padding: 5px;
+    }
+  }
+
+  .footer {
+    input {
+      width: auto;
+      float: right;
+      margin: 0 85px 0 0;
+    }
+  }
 }
 
-.btn.primary{
-  border: 1px solid #1b5da0;
-  cursor: pointer;
-  font-weight: bold;
-  background-color: #5599dd;
-  color: white;
-}
-.btn.primary:hover{
-  background-color: #4290df;
-  border-color: #3399ff;
-  color: #FFF;
-  text-decoration: none;
-}
-.btn.primary[disabled=disabled], .btn.primary[disabled=disabled]:hover{
-  color: #D1D1D1;
-  cursor: default;
-  box-shadow: 0 1px 0 rgba(95, 50, 0, 0.5);
-  background-color: white;
-  border-color: #d1d1d1;
-}
