--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -21,8 +21,9 @@ body {
 
   .top {
     padding: 5px 0;
-    a.login-item {
+    a {
       float: right;
+      padding: 0 10px;
     }
   }
 
@@ -58,7 +59,7 @@ body {
   }
 
   #main {
-    .blogs, .blog-detail {
+    .blogs, .blog-detail, .blog-new {
       width: 80%;
       display: inline-block;
     }
