--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -8,7 +8,7 @@
   border-radius: 3px;
   header{
     padding: 20px;
-    a.title{
+    a.article-title{
       font-size: 2em;
       font-weight: bold;
       line-height: 1.1em;
@@ -21,6 +21,12 @@
       position: relative;
       top: 15px;
       right: -10px;
+    }
+    a.article-edit {
+      width: 25px;
+      background: url("http://localhost:8080/stylesheets/images/icon.png") no-repeat 0 1px;
+      display: inline-block;
+      height: 26px;
     }
   }
   .content {
