--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -8,6 +8,7 @@ html
     link(rel="stylesheet/less", type="text/css", href='/stylesheets/user.less')
     link(rel="stylesheet/less", type="text/css", href='/stylesheets/common.less')
     link(rel="stylesheet/less", type="text/css", href='/stylesheets/plugin.less')
+    link(rel="stylesheet/less", type="text/css", href='/stylesheets/octicons/octicons.less')
     script(src='/javascripts/less-2.0.0.min.js')
   body
     .top 
