--- a/app/views/blogs/new.jade
+++ b/app/views/blogs/new.jade
@@ -9,7 +9,19 @@ block content
         input(name="title", value= blog.title ? blog.title : "")
       div.content
         label.left-title 内容
-        textarea(name="content", rows="30", cols="100")= blog.originContent ? blog.originContent : ""
+        div.content-edit.editor(data-defer="editor")
+          div.meta.clearfix
+            ul.tabnav-tabs
+              li
+                a(href="#" class="code tabnav-tab selected commit-edit")
+                  span.octicon.octicon-code
+                  label 编辑
+              li
+                a(href="#" class="code tabnav-tab commit-preview")
+                  span.octicon.octicon-eye
+                  label 预览
+          textarea(name="content", cols="107")= blog.originContent ? blog.originContent : ""
+          div.preview.hide.article-entry
       div.tags
         label.left-title 标签
         .dropdown(data-defer="dropdown")
@@ -23,5 +35,6 @@ block content
       div.footer
         input.btn.primary(type="submit", value="提交")
 block footerJS
-  script(src='/javascripts/plugin.js')
-  script(src='/javascripts/dropdown.js')
+  script(src='/javascripts/plugins/plugin.js')
+  script(src='/javascripts/plugins/dropdown.js')
+  script(src='/javascripts/plugins/editor.js')
