--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -7,7 +7,7 @@
   -webkit-border-radius: 3px;
   border-radius: 3px;
   header{
-    padding: 20px;
+    padding: 20px 20px 0px;
     a.article-title{
       font-size: 2em;
       font-weight: bold;
@@ -23,10 +23,9 @@
       right: -10px;
     }
     a.article-edit {
-      width: 25px;
-      background: url("http://localhost:8080/stylesheets/images/icon.png") no-repeat 0 1px;
+      padding-left: 10px;
+      color: #777;
       display: inline-block;
-      height: 26px;
     }
   }
   .content {
@@ -151,5 +150,10 @@
       margin: 0 85px 0 0;
     }
   }
-}
 
+  .content-edit{
+      display: inline-block;
+      width: 778px;
+  }
+
+}
