--- a/public/stylesheets/plugin.less
+++ b/public/stylesheets/plugin.less
@@ -6,31 +6,59 @@
 .dropdown .dropdown-toggle:active, .open .dropdown-toggle { outline: 0;}
 .dropdown .dropdown-menu { position: absolute;top: 100%;left: 0;z-index: 1000;display: none;float: left;width: 153px;padding: 5px 0;margin: 2px 0 0;list-style: none;background-color: white;border: 1px solid #5599DD;-webkit-background-clip: padding-box;-moz-background-clip: padding;background-clip: padding-box;}
 .dropdown .dropdown-menu li { padding:0 5px;}
-/* 查询邮编 */
-.search_postcode { position: absolute; z-index: 1000; border: 1px solid #ccc; width: 320px; background-color: #fff; }
-.search_postcode h4 { margin: 0; font-size: 12px; font-weight: normal; padding: 5px 10px; background-color: #f1f1f1; border-bottom: 1px solid #ccc; position: relative; }
-.search_postcode h4 a { position: absolute; font-size: 20px; line-height: 20px; color: #9abbde; text-shadow: 0 1px 0 #ffffff; top: 2px; right: 5px; padding: 0; }
-.search_postcode ul { margin: 0 10px; }
-.search_postcode li { border-bottom: 1px #ccc dotted; padding: 4px; text-align: left; }
-.search_postcode li a { color: #0066cc; text-decoration: none; outline: 0; }
-/*配送下拉地址栏*/
-.prideliver_paper { padding: 2px 0; border: 1px solid #0B3D00; background: #FFF; position: absolute; z-index: 200; list-style: none; float: left; }
-.prideliver_paper dd { padding: 0 8px; text-align: left; list-style: none; border-top: 1px solid #FFFFFF; border-bottom: 1px solid #FFFFFF; cursor: pointer; min-height: 16px; line-height: 16px; color: #757575; float: left; width: 108px; margin: 1px 0; }
-.prideliver_paper dd:hover { font-weight: bold; color: #0E4501; background: #D1E8BA; border-top: 1px solid #0B3D00; border-bottom: 1px solid #0B3D00; }
-/* 错误提示 */
-.error_tip.error { border-color: #d80000 !important; background-color: #fff3f3 !important; }
-.error_tip.help_error { display: block; position: relative; text-align: left; _margin-left: 3px; color: #d80000; line-height: 22px; padding-left: 16px; margin-right: 10px; }
-.error_tip.help_error .ico_error_s { position: absolute; left: 0; top: 6px; width: 12px; height: 12px; background-position: -50px -75px; background-image: url("http://pic.c-ctrip.com/fltdomestic111027/ico_sprite_140508.png"); background-repeat: no-repeat; }
-/*提示框*/
-.tooltip {position: absolute;z-index: 1030;display: block;font-size: 11px;line-height: 1.4;opacity: 0;filter: alpha(opacity=0);visibility: visible;}
-.tooltip.in {opacity: 0.9;filter: alpha(opacity=90);}
-.tooltip.top {padding: 5px 0;margin-top: -3px;}
-.tooltip.right {padding: 0 5px;margin-left: 3px;}
-.tooltip.bottom {padding: 5px 0;margin-top: 3px;}
-.tooltip.left {padding: 0 5px;margin-left: -3px;}
-.tooltip-inner {border: 1px solid #99ccff;max-width: 200px;padding: 8px 15px;color: #000;text-align: center;text-decoration: none;background-color: #fff;-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;}
-.tooltip-arrow {position: absolute;width: 0;height: 0;border-color: transparent;border-style: solid;display:none;}
-.tooltip.top .tooltip-arrow {bottom: 0;left: 50%;margin-left: -5px;border-top-color: #000000;border-width: 5px 5px 0;}
-.tooltip.right .tooltip-arrow {top: 50%;left: 0;margin-top: -5px;border-right-color: #000000;border-width: 5px 5px 5px 0;}
-.tooltip.left .tooltip-arrow {top: 50%;right: 0;margin-top: -5px;border-left-color: #000000;border-width: 5px 0 5px 5px;}
-.tooltip.bottom .tooltip-arrow {top: 0;left: 50%;margin-left: -5px;border-bottom-color: #000000;border-width: 0 5px 5px;}
+
+.editor{
+  border: 1px solid #ddd;
+  .meta {
+    padding: 5px 10px 0;
+    text-shadow: 0 1px 0 #fff;
+    border-bottom: 1px solid #d8d8d8;
+    background-color: #f7f7f7;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+
+    ul.tabnav-tabs {
+      margin: -6px 0 0 -11px;
+      display: inline-block;
+      padding: 0;
+      li {
+        display: inline-block;
+        margin-bottom: -1px;
+        a.tabnav-tab{
+          font-weight: bold;
+          padding: 12px 15px;
+          border-radius: 0;
+          display: inline-block;
+          font-size: 14px;
+          line-height: 20px;
+          color: #666;
+          text-decoration: none;
+          border: 1px solid transparent;
+          border-bottom: 0;
+          label{
+            cursor: pointer;
+          }
+        }
+        a.tabnav-tab.selected{
+          color: #333;
+          background-color: #fff;
+          border-color: #ddd;
+          border-radius: 3px 3px 0 0;
+        }
+        label {
+          padding-left: 5px;
+        }
+      }
+    }
+  }
+  .meta:before {
+    display: table;
+    content: "";
+  }
+  textarea, .preview {
+    border: 0;
+    height: 600px;
+    overflow-y: scroll;
+  }
+
+}
