add blog delete

--- a/app/views/blogs/blog_detail.jade
+++ b/app/views/blogs/blog_detail.jade
@@ -6,6 +6,8 @@ if blog
         if (session.login)
           a(class="article-edit", href="/blog/edit/#{blog.id}")
             span.octicon.octicon-pencil
+          a(class="article-delete", href="/blog/delete/#{blog.id}")
+            span.octicon.octicon-trashcan
         label.article-times 阅读#{blog.times}次
     .content.article-entry
       != blog.content
