--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -22,7 +22,7 @@
       top: 15px;
       right: -10px;
     }
-    a.article-edit {
+    a.article-edit, a.article-delete{
       padding-left: 10px;
       color: #777;
       display: inline-block;
