--- a/public/stylesheets/plugin.less
+++ b/public/stylesheets/plugin.less
@@ -1,3 +1,23 @@
+.plugins{
+  width: 80%;
+  .plugin {
+    background: #fff;
+    -webkit-box-shadow: 1px 2px 3px #ddd;
+    box-shadow: 1px 2px 3px #ddd;
+    border: 1px solid #ddd;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    padding: 10px;
+    margin: 10px 0 30px;
+    header{
+      margin: 0 0 13px 5px;
+    }
+  }
+  .editor{
+    margin: 0 auto;
+  }
+}
+
 /* 下拉框 */
 .dropdown { position: relative;display: inline-block;border-radius: 2px;background: white;border: 1px solid #ccc;height: 24px;line-height: 24px;vertical-align: middle; }
 .dropdown .dropdown-toggle { line-height: 24px;padding: 0 22px 0 12px;text-decoration: none;cursor: pointer;font-size: 11px;background: transparent url("images/arrow-chart-ch.png") no-repeat right -3px;height: 24px;overflow: hidden;width: 120px;display: inline-block;text-overflow: ellipsis;white-space: nowrap;color:black;}
@@ -9,6 +29,7 @@
 
 .editor{
   border: 1px solid #ddd;
+  width: 788px;
   .meta {
     padding: 5px 10px 0;
     text-shadow: 0 1px 0 #fff;
@@ -59,6 +80,7 @@
     border: 0;
     height: 600px;
     overflow-y: scroll;
+    padding: 5px;
+    width: 778px;
   }
-
 }
