--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -25,6 +25,7 @@ html
       nav
         a(href="/") 首页
         a(href="/") 推荐
+        a(href="/plugin") 插件
         a(href="/about") 关于blog
     #main
       block content
