--- a/app/views/shares/about.jade
+++ b/app/views/shares/about.jade
@@ -2,4 +2,6 @@ extends layout
 
 block content
   .about 
-    div 本网站为学习nodejs创建，正在不停完善中
+    div 本网站为学习nodejs创建，正在不停完善中 项目地址https://github.com/geraldchen890806/blog_nodejs
+    br
+    div 推荐一个程序员拍卖网站^_^ http://100offer.com/i/ZS5tiqnh
