--- a/app/views/shares/about.jade
+++ b/app/views/shares/about.jade
@@ -5,3 +5,9 @@ block content
     div 本网站为学习nodejs创建，正在不停完善中 项目地址https://github.com/geraldchen890806/blog_nodejs
     br
     div 推荐一个程序员拍卖网站^_^ http://100offer.com/i/ZS5tiqnh
+    br
+    div 解释下blog名字。。
+    br
+    div 2014-07-27我的儿子出生了 一直期望是个女儿 名字都取好了 就叫陈佳人。。。
+    br
+    div 至于blog域名 是老婆大人的名字缩写。。
