--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -29,5 +29,5 @@ html
         a(href="/about") 关于blog
     #main
       block content
-      script(src='/javascripts/jquery-1.11.1.js')
+      script(src='http://code.jquery.com/jquery-1.11.2.min.js')
       block footerJS
