fixed right layout

--- a/app/views/blogs/index.jade
+++ b/app/views/blogs/index.jade
@@ -5,3 +5,5 @@ block content
     for blog in blogs
       include ./blog_detail.jade
   include ../shares/right.jade
+block footerJS
+  script(src='/javascripts/blog.js')
