--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -71,9 +71,10 @@ body {
     }
 
     #right{
-      width: 19%;
-      height: 800px;
+      position: fixed;
       float: right;
+      width: 220px;
+      height: 800px;
       margin: 10px 0 0;
       background: #F7F7F7;
       border-radius: 5px;
