--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -85,7 +85,7 @@ body {
       }
 
       li {
-        padding: 5px 5% 0;
+        padding: 5px;
         a {
           font-size: 15px;
           text-decoration: none;
