--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -8,19 +8,19 @@
   border-radius: 3px;
   header{
     padding: 20px 20px 0px;
+    position: relative;
     a.article-title{
       font-size: 2em;
       font-weight: bold;
       line-height: 1.1em;
     }
     .article-times {
-      float:right;
       color: #999;  
       vertical-align: bottom;
       font-size: 12px;   
-      position: relative;
-      top: 15px;
-      right: -10px;
+      position: absolute;
+      top: 40px;
+      right: 10px;
     }
     a.article-edit, a.article-delete{
       padding-left: 10px;
