fix about layout

--- a/app/views/shares/about.jade
+++ b/app/views/shares/about.jade
@@ -11,3 +11,4 @@ block content
     div 2014-07-27我的儿子出生了 一直期望是个女儿 名字都取好了 就叫陈佳人。。。
     br
     div 至于blog域名 是老婆大人的名字缩写。。
+    image(src="#{imageUrl}")
