--- a/app/views/shares/right.jade
+++ b/app/views/shares/right.jade
@@ -11,3 +11,8 @@
       -for tag in tags
         li
           a(href="/blog/tag/#{tag.id}")= tag.name
+  #links
+    h4.title 友情链接
+    ul
+      li
+        a(href="http://www.jiweiwei.com/") 众生相
