--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -97,7 +97,7 @@ body {
         }
       }
 
-      #tags {
+      #tags, #links {
         margin-top: 40px;
         li {
           display: inline-block;
@@ -116,6 +116,13 @@ body {
     border: 1px solid #ddd;
     -webkit-border-radius: 3px;
     border-radius: 3px;
+    min-height: 600px;
+    position: relative;
+    img {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+    }
   }
   /*#main{
     border-radius: 4px 0 0 0;
