--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -118,10 +118,13 @@ body {
     border-radius: 3px;
     min-height: 600px;
     position: relative;
-    img {
+    .info {
       position: absolute;
-      top: 15px;
-      right: 15px;
+      top: 30px;
+      right: 28px;
+      div {
+        padding: 5px 0;
+      }
     }
   }
   /*#main{
