--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -50,11 +50,17 @@ body {
       margin: 5px 0px;
       height: 20px;
     }
-    nav a {
-      margin: 15px 0 0;
+  }
+
+  nav {
+    margin: 0 20px;
+    a {
+      font-family: 'Microsoft Yahei';
       padding: 8px;
       list-style: none;
       text-decoration: none;
+      text-shadow: 1px 1px 0 #aaa;
+      color: #555;
     }
   }
 
