--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -105,10 +105,12 @@
         }
       }
       .in-content {
-        textarea{
+        .editor {
           width: 720px;
-          height: 100px!important;
-          padding: 5px;
+          display: inline-block;
+          textarea, .preview {
+            height: 200px;
+          }
         }
       }
       .in-btn {
