--- a/public/stylesheets/plugin.less
+++ b/public/stylesheets/plugin.less
@@ -80,7 +80,8 @@
     border: 0;
     height: 600px;
     overflow-y: scroll;
-    padding: 5px;
-    width: 778px;
+    padding: 0;
+    width: 100%;
+    box-sizing: border-box;
   }
 }
