--- a/app/views/blogs/blog.jade
+++ b/app/views/blogs/blog.jade
@@ -6,3 +6,5 @@ block content
   include ../shares/right.jade
 block footerJS
   script(src='/javascripts/blog.js')
+  script(src='/javascripts/plugins/plugin.js')
+  script(src='/javascripts/plugins/editor.js')
