--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -16,7 +16,9 @@ html
         a(href="/user/login") 登陆
       else
         a 欢迎 #{session.loginData.name}
+        a(href="/user/logout") 注销
         a(href="/blog/new") new
+
     header.layout-header
       div
         h1 
@@ -24,7 +26,7 @@ html
         p 人生是一场独自修行的道路
     nav
       a(href="/") 首页
-      a(href="/") 推荐
+      a(href="/recommend") 推荐
       a(href="/plugin") 插件
       a(href="/about") 关于blog
     #main
