--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -104,7 +104,7 @@ body {
         }
       }
 
-      #tags, #links {
+      #tags, #links, #share{
         margin-top: 40px;
         li {
           display: inline-block;
