--- a/app/views/shares/right.jade
+++ b/app/views/shares/right.jade
@@ -16,3 +16,8 @@
     ul
       li
         a(href="http://www.jiweiwei.com/") 众生相
+  #share
+    ul
+      li
+        a(href='http://cloud.feedly.com/#subscription%2Ffeed%2Fhttp%3A%2F%2Frenjm.com/feed.xml',target='blank')
+          img(id='feedlyFollow',src='http://s3.feedly.com/img/follows/feedly-follow-rectangle-volume-small_2x.png',alt='follow us in feedly',width='66',height='20')
