--- a/app/views/shares/right.jade
+++ b/app/views/shares/right.jade
@@ -19,5 +19,5 @@
   #share
     ul
       li
-        a(href='http://cloud.feedly.com/#subscription%2Ffeed%2Fhttp%3A%2F%2Frenjm.com/feed.xml',target='blank')
+        a(href='http://cloud.feedly.com/#subscription%2Ffeed%2Fhttp%3A%2F%2Frenjm.com/feed',target='blank')
           img(id='feedlyFollow',src='http://s3.feedly.com/img/follows/feedly-follow-rectangle-volume-small_2x.png',alt='follow us in feedly',width='66',height='20')
