add gruntfile to minfy js and css

--- a/app/views/blogs/blog.jade
+++ b/app/views/blogs/blog.jade
@@ -5,6 +5,5 @@ block content
     include ./blog_detail.jade
   include ../shares/right.jade
 block footerJS
-  script(src='/javascripts/blog.js')
-  script(src='/javascripts/plugins/plugin.js')
-  script(src='/javascripts/plugins/editor.js')
+  script(src='/javascripts/blog.min.js')
+  script(src='/javascripts/plugins.min.js')
