--- a/app/views/blogs/index.jade
+++ b/app/views/blogs/index.jade
@@ -6,4 +6,4 @@ block content
       include ./blog_detail.jade
   include ../shares/right.jade
 block footerJS
-  script(src='/javascripts/blog.js')
+  script(src='/javascripts/blog.min.js')
