--- a/app/views/blogs/new.jade
+++ b/app/views/blogs/new.jade
@@ -41,6 +41,4 @@ block content
       div.footer
         input.btn.primary(type="submit", value="提交")
 block footerJS
-  script(src='/javascripts/plugins/plugin.js')
-  script(src='/javascripts/plugins/dropdown.js')
-  script(src='/javascripts/plugins/editor.js')
+  script(src='/javascripts/plugins.min.js')
