--- a/app/views/plugins/mk.jade
+++ b/app/views/plugins/mk.jade
@@ -20,5 +20,4 @@ block content
         textarea(name="content")
         div.preview.hide.article-entry
 block footerJS
-  script(src='/javascripts/plugins/plugin.js')
-  script(src='/javascripts/plugins/editor.js')
+  script(src='/javascripts/plugins.min.js')
