--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -25,5 +25,5 @@ html
       a(href="/about") 关于blog
     #main
       block content
-      script(src='http://code.jquery.com/jquery-1.11.2.min.js')
+      script(src='/javascripts/jquery-1.10.2.min.js')
       block footerJS
