--- a/public/stylesheets/plugin.less
+++ b/public/stylesheets/plugin.less
@@ -79,7 +79,7 @@
     border: 0;
     height: 600px;
     overflow-y: scroll;
-    padding: 0;
+    padding: 10px 5px;
     width: 100%;
     box-sizing: border-box;
   }
