--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -33,6 +33,7 @@
     padding: 0 5px 0 20px;
     font-size: 14px;
     overflow: hidden;
+    height: 300px;
   }
   footer{
     font-size: 0.85em;
