--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title 陈佳人
+    title 修
     link(rel="stylesheet", href='/stylesheets/plugins.min.css', type="text/css")
     link(rel="stylesheet", href='/stylesheets/blog.min.css', type="text/css")
   body
@@ -16,7 +16,7 @@ html
     header.layout-header
       div
         h1 
-          a(href="/") 陈佳人
+          a(href="/") 修
         p 人生是一场独自修行的道路
     nav
       a(href="/") 首页
