--- a/app/views/shares/right.jade
+++ b/app/views/shares/right.jade
@@ -21,3 +21,5 @@
       li
         a(href='http://cloud.feedly.com/#subscription%2Ffeed%2Fhttp%3A%2F%2Frenjm.com/feed',target='blank')
           img(id='feedlyFollow',src='/stylesheets/images/feedly-follow-rectangle-volume-small_2x.png',alt='follow us in feedly',width='66',height='20')
+        a(href='/feed',target='blank')
+          img(src='/stylesheets/images/feed-icon-14x14.png',alt='follow us in rss',width='20',height='20')
