--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -110,6 +110,9 @@ body {
           display: inline-block;
         }
       }
+      #share a {
+        padding-right: 10px;
+      }
     }
   }
 
