--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -1,5 +1,5 @@
 .blog {
-  margin: 10px 0 30px;
+  margin: 0 0 30px;
   background: #fff;
   -webkit-box-shadow: 1px 2px 3px #ddd;
   box-shadow: 1px 2px 3px #ddd;
