--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+}
 body {
   a{
     text-decoration: none;
@@ -65,10 +69,14 @@ body {
   }
 
   #main {
-    width: 80%;
+    background: #F7F7F7;
+    padding: 10px 0;
+    border-radius: 3px;
+    margin: 8px 0 0 0;
     .blogs, .blog-detail, .blog-new {
-      width: 100%;
+      width: 800px;
       display: inline-block;
+      margin: 0 0 0 10px;
     }
 
     .blog-detail {
@@ -78,12 +86,10 @@ body {
     }
 
     #right{
-      position: fixed;
       float: right;
-      width: 220px;
+      width: 260px;
       height: 800px;
-      margin: 10px 0 0;
-      background: #F7F7F7;
+      margin: 10px 0 0 10px;
       border-radius: 5px;
 
       .title {
@@ -120,12 +126,6 @@ body {
   .about {
     margin: 10px 0 30px;
     padding: 30px 30px 50px;
-    background: #fff;
-    -webkit-box-shadow: 1px 2px 3px #ddd;
-    box-shadow: 1px 2px 3px #ddd;
-    border: 1px solid #ddd;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
     min-height: 600px;
     position: relative;
     .info {
