--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -110,7 +110,7 @@ body {
         }
       }
 
-      #tags, #links, #share{
+      .item {
         margin-top: 20px;
         li {
           display: inline-block;
