--- a/public/stylesheets/plugin.less
+++ b/public/stylesheets/plugin.less
@@ -28,13 +28,12 @@
     border-top-right-radius: 4px;
 
     ul.tabnav-tabs {
-      margin: -1px 0 0 -1px;
       display: inline-block;
+      margin-bottom: -1px;
       padding: 0;
       li {
         display: inline-block;
-        margin-bottom: -1px;
-        a.tabnav-tab{
+        a.tabnav-tab {
           font-weight: bold;
           padding: 12px 15px;
           border-radius: 0;
@@ -43,9 +42,9 @@
           line-height: 20px;
           color: #666;
           text-decoration: none;
-          border: 1px solid transparent;
+          border-right: 1px solid transparent;
           border-bottom: 0;
-          label{
+          label {
             cursor: pointer;
           }
         }
@@ -57,6 +56,11 @@
         }
         label {
           padding-left: 5px;
+        }
+      }
+      li + li {
+        a{
+          border-left: 1px solid transparent;
         }
       }
     }
