--- a/app/views/blogs/blog_detail.jade
+++ b/app/views/blogs/blog_detail.jade
@@ -1,49 +1,50 @@
 for blog in blogs
-  div.blog
-    header.article-header
-      h1
-        a(class="article-title", href="/blog/#{blog.id}")= blog.title
-        if (session.login)
-          a(class="article-edit", href="/blog/edit/#{blog.id}")
-            span.octicon.octicon-pencil
-          a(class="article-delete", href="/blog/delete/#{blog.id}")
-            span.octicon.octicon-trashcan
-      label.article-times 阅读#{blog.times}次
-    .content.article-entry
-      != blog.content
-    footer.article-footer
-      ul.article-tag-list
-        - for tag in blog.tags
-          li.article-tag-list-item
-            a(href="/blog/tag/#{tag.id}").article-tag-list-link= tag.name
-      a(href="#").article-time= blog.addTime
-    if comments
-      .comments
-        - each comment in comments
-          div.comment
-            .name= comment.name
-            .content
-              .time= comment.addTime
-              div= comment.content
-        div.in-comment
-          input(type="hidden",name="blogID",id="blogID",value="#{blog.id}")
-          div.in-name
-            label 姓名：
-            input.name(name="name")
-          div.in-content
-            label 内容：
-            div.content-edit.editor(data-defer="editor")
-              div.meta.clearfix
-                ul.tabnav-tabs
-                  li
-                    a(href="" class="code tabnav-tab selected commit-edit")
-                      span.octicon.octicon-code
-                      label 编辑
-                  li
-                    a(href="" class="code tabnav-tab commit-preview")
-                      span.octicon.octicon-eye
-                      label 预览
-              textarea(name="content")
-              div.preview.hide.article-entry
-          div.in-btn
-            input.btn.primary(type="button",value="提交")
+  if !blog.isDraft || (session &&session.login)
+    div.blog
+      header.article-header
+        h1
+          a(class="article-title", href="/blog/#{blog.id}")= blog.title
+          if (session.login)
+            a(class="article-edit", href="/blog/edit/#{blog.id}")
+              span.octicon.octicon-pencil
+            a(class="article-delete", href="/blog/delete/#{blog.id}")
+              span.octicon.octicon-trashcan
+        label.article-times 阅读#{blog.times}次
+      .content.article-entry
+        != blog.content
+      footer.article-footer
+        ul.article-tag-list
+          - for tag in blog.tags
+            li.article-tag-list-item
+              a(href="/blog/tag/#{tag.id}").article-tag-list-link= tag.name
+        a(href="#").article-time= blog.addTime
+      if comments
+        .comments
+          - each comment in comments
+            div.comment
+              .name= comment.name
+              .content
+                .time= comment.addTime
+                div= comment.content
+          div.in-comment
+            input(type="hidden",name="blogID",id="blogID",value="#{blog.id}")
+            div.in-name
+              label 姓名：
+              input.name(name="name")
+            div.in-content
+              label 内容：
+              div.content-edit.editor(data-defer="editor")
+                div.meta.clearfix
+                  ul.tabnav-tabs
+                    li
+                      a(href="" class="code tabnav-tab selected commit-edit")
+                        span.octicon.octicon-code
+                        label 编辑
+                    li
+                      a(href="" class="code tabnav-tab commit-preview")
+                        span.octicon.octicon-eye
+                        label 预览
+                textarea(name="content")
+                div.preview.hide.article-entry
+            div.in-btn
+              input.btn.primary(type="button",value="提交")
