--- a/app/views/blogs/new.jade
+++ b/app/views/blogs/new.jade
@@ -38,6 +38,9 @@ block content
         label 
           input(type="checkbox",name="isRecommend", checked = !!(blog.isRecommend))
           span 推荐
+        label
+          input(type="checkbox",name="isDraft", checked = !!(blog.isDraft))
+          span 草稿
       div.footer
         input.btn.primary(type="submit", value="提交")
 block footerJS
