--- a/public/stylesheets/user.less
+++ b/public/stylesheets/user.less
@@ -1,12 +1,6 @@
 .user {
   margin: 10px 0 30px;
-  background: #fff;
-  -webkit-box-shadow: 1px 2px 3px #ddd;
-  box-shadow: 1px 2px 3px #ddd;
-  border: 1px solid #ddd;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  padding: 80px 0;
+  padding: 120px 0;
 
   .content{
     width:300px;
@@ -17,6 +11,10 @@
     label {
       width: 60px;
       display: inline-block;
+    }
+    input {
+      line-height: 22px;
+      height: 22px;
     }
   };
 }
