--- a/app/views/home/about.jade
+++ b/app/views/home/about.jade
@@ -7,5 +7,5 @@ block content
     div 推荐一个程序员拍卖网站^_^ http://100offer.com/i/ZS5tiqnh
     br
     div.info
-        image(src="#{imageUrl}")
+        image(src="stylesheets/images/icon.png")
         div geraldchen890806@gmail.com
