--- a/app/views/blogs/blog_detail.jade
+++ b/app/views/blogs/blog_detail.jade
@@ -19,32 +19,4 @@ for blog in blogs
               a(href="/blog/tag/#{tag.id}").article-tag-list-link= tag.name
         a(href="#").article-time= blog.addTime
       if comments
-        .comments
-          - each comment in comments
-            div.comment
-              .name= comment.name
-              .content
-                .time= comment.addTime
-                div= comment.content
-          div.in-comment
-            input(type="hidden",name="blogID",id="blogID",value="#{blog.id}")
-            div.in-name
-              label 姓名：
-              input.name(name="name")
-            div.in-content
-              label 内容：
-              div.content-edit.editor(data-defer="editor")
-                div.meta.clearfix
-                  ul.tabnav-tabs
-                    li
-                      a(href="" class="code tabnav-tab selected commit-edit")
-                        span.octicon.octicon-code
-                        label 编辑
-                    li
-                      a(href="" class="code tabnav-tab commit-preview")
-                        span.octicon.octicon-eye
-                        label 预览
-                textarea(name="content")
-                div.preview.hide.article-entry
-            div.in-btn
-              input.btn.primary(type="button",value="提交")
+        include ./comment.jade
