--- a/app/views/users/login.jade
+++ b/app/views/users/login.jade
@@ -5,9 +5,13 @@ block content
       form(action="login" method="post")
         div
           label 用户名：
-          input(name="name")#name
+          input(name="name", value=session.saveLogin ? session.loginData.name : "")#name
         div
           label 密码：
-          input(name="password")#psw
+          input(type="password", name="password", value=session.saveLogin ? session.loginData.password : "")#psw
+        div
+          label
+            input(type="checkbox",name="saveLogin",checked= !!session.saveLogin)
+            span 记住我
         div
           input.btn.primary(type="submit", value="登陆")
