add baidu plugin

--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -26,4 +26,6 @@ html
     #main
       block content
       script(src='/javascripts/jquery-1.10.2.min.js')
+      script(src='/javascripts/plugins.min.js')
+      script(src='/javascripts/blog.min.js')
       block footerJS
