--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -24,7 +24,7 @@ html
     header.layout-header
       div
         h1 
-          a(href="/") 修
+          a(href="/", title="修") 修
         p 人生是一场独自修行的道路
     nav
       a(href="/") 首页
