--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title 修
+    title 修 - 人生是一场独自修行的道路
     link(rel="stylesheet", href='/stylesheets/plugins.min.css', type="text/css")
     link(rel="stylesheet", href='/stylesheets/blog.min.css', type="text/css")
     script(type='text/javascript').
