--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -17,7 +17,7 @@ html
     meta(charset="UTF-8")
     meta(name="author", content="陈广亮-geraldchen")
     meta(name="description", content="人生是一场独自修行的道路--前端开发修炼之路- http://renjm.com")
-    meta(name="keywords",content="js,javascript,nodejs,node,koa,jquery,git,git shell,es6,performance,regexp,codewars,repeat,js repeat,array, reduce,forever,node forever,git shell error,once,generator,co,tj,tj co,replace,markdown,node markdown,chrome,firefox,safira,showModalDialog,window.open,hightlight.js,removerepeat,feedly,rss,memoization,copy,复制,代码风格转换,代码风格互转,for循环,js记忆,js性能,web性能,性能,函数返回值,正则表达式,array方法,js去重,js运算符,js解析xml,前端开发,技术博客")
+    meta(name="keywords",content="js,javascript,nodejs,node,koa,jquery,git,git shell,es6,performance,regexp,codewars,repeat,js repeat,array, reduce,forever,node forever,git shell error,once,generator,co,tj,tj co,replace,markdown,node markdown,chrome,firefox,safira,showModalDialog,window.open,hightlight.js,removerepeat,feedly,rss,memoization,copy,复制,代码风格转换,代码风格互转,for循环,js记忆,js性能,web性能,性能,函数返回值,正则表达式,array方法,js去重,js运算符,js解析xml,前端开发,技术博客,nodejs建博客")
     meta(name="google-site-verification", content="PPHSoBGy6QnFVSSdV0lOm37TmkhfMa1UpVLW8zcrauI")
   body
     .top
