--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -31,7 +31,7 @@ html
     header.layout-header
       div
         h1 
-          a(href="/", title="修") 修
+          a(href="/", title="修") 修 - renjm.com
         p 人生是一场独自修行的道路
     nav
       a(href="/") 首页
