--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -8,10 +8,25 @@ html
       if (!~this.location.host.indexOf("localhost")) {
         var _hmt = _hmt || [];
         (function () {
+          //baidu
           var hm = document.createElement("script");
           hm.src = "//hm.baidu.com/hm.js?3a85a4cae21d2938de06a478872fb525";
           var s = document.getElementsByTagName("script")[0];
           s.parentNode.insertBefore(hm, s);
+          //google
+          (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+              (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+          })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+          ga('create', 'UA-59665544-1', 'auto');
+          ga('send', 'pageview');
         })();
       }
     meta(charset="UTF-8")
