--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -73,7 +73,7 @@ body {
     padding: 10px 0;
     border-radius: 3px;
     margin: 8px 0 0 0;
-    .blogs, .blog-detail, .blog-new {
+    .blogs, .blog-detail, .blog-new, .plugins{
       width: 800px;
       display: inline-block;
       margin: 0 0 0 10px;
@@ -146,6 +146,21 @@ body {
 
   .error {
     padding: 30px;
+  }
+
+  .plugins{
+    .plugin {
+      margin: 10px 0 30px;
+      header{
+        margin: 0 0 13px 5px;
+      }
+    }
+    .plugin_checkAll {
+      li {
+        float: left;
+        padding: 5px 10px;
+      }
+    }
   }
 }
 
