--- a/public/stylesheets/blog.less
+++ b/public/stylesheets/blog.less
@@ -41,26 +41,14 @@
     border-top: 1px solid #ddd;
     padding-top: 1.6em;
     margin: 0 20px 20px;
-    ul.blog-tags {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      border: 0;
-      outline: 0;
-      li.blog-tag {
-        float: left;
-        margin-left: 10px;
-        a {
-          color: #999;
-          text-decoration: none;
-        }
-        a:before{
-          content: "#";
-        }
-      }
-    }
     .article-time {
       float: right;
+    }
+    .article-next-link {
+      margin: 0 0 10px;
+      a {
+        padding: 0 10px;
+      }
     }
   }
 
