--- a/app/views/shares/layout.jade
+++ b/app/views/shares/layout.jade
@@ -19,10 +19,10 @@ html
         a(href="/blog/new") new
 
     header.layout-header
-      div
+      hgroup
         h1 
           a(href="/", title="修") 修 - renjm.com
-        p 人生是一场独自修行的道路
+        h5 人生是一场独自修行的道路
     nav
       a(href="/") 首页
       a(href="/recommend") 推荐
