--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -58,10 +58,13 @@ body {
 
   nav {
     margin: 0 20px;
+    li {
+      float: left;
+      list-style: none;
+    }
     a {
       font-family: 'Microsoft Yahei';
       padding: 8px;
-      list-style: none;
       text-decoration: none;
       text-shadow: 1px 1px 0 #aaa;
       color: #555;
