--- a/public/stylesheets/plugin.less
+++ b/public/stylesheets/plugin.less
@@ -6,7 +6,9 @@
 .dropdown .dropdown-toggle:active, .open .dropdown-toggle { outline: 0;}
 .dropdown .dropdown-menu { position: absolute;top: 100%;left: 0;z-index: 1000;display: none;float: left;width: 153px;padding: 5px 0;margin: 2px 0 0;list-style: none;background-color: white;border: 1px solid #5599DD;-webkit-background-clip: padding-box;-moz-background-clip: padding;background-clip: padding-box;}
 .dropdown .dropdown-menu li { padding:0 5px;}
-
+.dropdown #newTag { width:100px;}
+.dropdown .btn { height: auto;width: 38px;line-height: normal;padding: 2px;margin-left: 3px;}
+.dropdown .octicon { float: right;cursor: pointer;}
 .editor{
   border: 1px solid #ddd;
   width: 700px;
