--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -32,7 +32,7 @@ body {
   }
 
   .layout-header {
-    margin: 20px 0 10px;
+    margin: 20px 10px 10px;
     text-shadow: 1px 1px 0 #aaa;
     font-family: 'Microsoft Yahei';
     h1 a{
