add link samson's blog

--- a/app/views/shares/right.jade
+++ b/app/views/shares/right.jade
@@ -16,6 +16,8 @@ aside#right
     ul
       li
         a(href="http://www.jiweiwei.com/") 众生相
+      li
+        a(href="http://blog.samsonis.me/") Samson's Weblog
   #share.item
     ul
       li
